fix popup word wrapping

--- a/src/style.css
+++ b/src/style.css
@@ -165,6 +165,7 @@ main img {
   background-color: rgba(var(--rgb-white), .8);
   cursor: pointer;
   transition: .2s;
+  white-space: nowrap;
 }
 
 .popup li:not(:last-child) {
